[package]
name = "schc_r_c"
version = "0.1.0"
edition = "2021"
authors = ["Sam"]
description = "Static Context Header Compression (SCHC) implementation in Rust with streaming tree-based compression"
license = "MIT"
repository = "https://github.com/yourusername/schc-rust"
keywords = ["schc", "compression", "iot", "lpwan", "ipv6"]
categories = ["compression", "network-programming", "embedded"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
bitvec = "1.0.1"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
pcap-file = "2.0"
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[lib]
name = "schc"
path = "src/lib.rs"

[[bin]]
name = "tree_builder"
path = "src/bin/tree_builder.rs"

[[bin]]
name = "compressor"
path = "src/bin/compressor.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
