[package]
name = "schc_r_c"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Sam"]
description = "Static Context Header Compression (SCHC) implementation in Rust with streaming tree-based compression"
license = "MIT"
repository = "https://github.com/yourusername/schc-rust"
keywords = ["schc", "compression", "iot", "lpwan", "ipv6"]
categories = ["compression", "network-programming", "embedded"]
readme = "README.md"

[dependencies]
bitvec = "1.0.1"
hex = "0.4"
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Binary-only dependencies
anyhow = { version = "1.0", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
ctrlc = { version = "3.4", optional = true }
pcap-file = { version = "2.0", optional = true }

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
bins = ["dep:anyhow", "dep:clap", "dep:ctrlc", "dep:pcap-file"]

[lib]
name = "schc"
path = "src/lib.rs"

[[bin]]
name = "tree_builder"
path = "src/bin/tree_builder.rs"
required-features = ["bins"]

[[bin]]
name = "compressor"
path = "src/bin/compressor.rs"
required-features = ["bins"]

[[bin]]
name = "live_compressor"
path = "src/bin/live_compressor.rs"
required-features = ["bins"]
